--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
             <a href="vic/" class="card">
                 <span class="state-badge vic-theme">VIC</span>
                 <h3>Victoria</h3>
-                <p><strong>2025 Rates</strong><br>Split Shifts & DiT Agreement</p>
+                <p><strong>2025 Rates</strong><br></p>
             </a>
 
             <a href="nsw/" class="card">
                 <span class="state-badge nsw-theme">NSW</span>
                 <h3>New South Wales</h3>
-                <p><strong>Award C9839</strong><br>Clinical On-Call & 10hr Rules</p>
+                <p><strong>Award C9839</strong><br></p>
             </a>
         </div>
 
@@ -128,3 +128,4 @@
 
 </body>
 </html>
+
