--- a/vic/index.html
+++ b/vic/index.html
@@ -124,8 +124,8 @@
 </head>
 <body>
 <nav class="navbar">
-    <a href="https://invisiblejunior.github.io/junior-doctor-pay-calculator/index.html" class="active-home">Home</a>
-    <a href="https://invisiblejunior.github.io/junior-doctor-pay-calculator/vic/">VIC</a>
+    <a href="https://invisiblejunior.github.io/junior-doctor-pay-calculator/index.html">Home</a>
+    <a href="#" class="active-vic">VIC</a>
     <a href="https://invisiblejunior.github.io/junior-doctor-pay-calculator/nsw/">NSW</a>
     <a href="https://invisiblejunior.github.io/junior-doctor-pay-calculator/qld/">QLD</a>
 </nav>
@@ -594,6 +594,7 @@
 
 </body>
 </html>
+
 
 
 
