--- a/qld/index.html
+++ b/qld/index.html
@@ -96,10 +96,53 @@
         .rule-item h4 { margin: 0 0 8px 0; color: #333; font-size: 15px; }
         .rule-item p { margin: 0 0 15px 0; font-size: 13px; color: #666; line-height: 1.5; }
         .rule-tag { display: inline-block; padding: 2px 6px; background: #eee; border-radius: 4px; font-size: 11px; font-weight: bold; color: #555; margin-bottom: 5px; }
+
+/* --- NAVIGATION MENU --- */
+    .navbar {
+        background-color: #2c3e50;
+        overflow: hidden;
+        border-radius: 6px;
+        margin-bottom: 25px;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .navbar a {
+        flex: 1;
+        display: block;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 12px 10px;
+        text-decoration: none;
+        font-weight: 600;
+        font-size: 14px;
+        transition: background 0.3s;
+        min-width: 80px;
+    }
+
+    .navbar a:hover {
+        background-color: #ddd;
+        color: black;
+    }
+
+    /* Active Page Colors */
+    .navbar a.active-home { background-color: #555; color: white; }
+    .navbar a.active-vic { background-color: #005eb8; color: white; }
+    .navbar a.active-nsw { background-color: #d32f2f; color: white; }
+    .navbar a.active-qld { background-color: #800000; color: white; }
+        
     </style>
 </head>
 <body>
 
+    <nav class="navbar">
+    <a href="https://invisiblejunior.github.io/junior-doctor-pay-calculator/index.html">Home</a>
+    <a href="https://invisiblejunior.github.io/junior-doctor-pay-calculator/vic/">VIC</a>
+    <a href="https://invisiblejunior.github.io/junior-doctor-pay-calculator/nsw/">NSW</a>
+    <a href="#" class="active-qld">QLD</a>
+</nav>
+    
     <h2>QLD Junior Doctor Pay Calculator</h2>
 
     <div class="controls-panel">
