--- a/nt/index.html
+++ b/nt/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NT Medical Pay Calculator (Fixed Status)</title>
     <style>
-        :root { --primary: #d35400; --bg: #fdf2e9; --card: #ffffff; --text: #2c3e50; --border: #e67e22; }
+        :root { --primary: #d35400; --bg: #f4f6f8; --card: #ffffff; --text: #2c3e50; --border: #e67e22; }
         body { 
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; 
             background: var(--bg); color: var(--text); padding: 20px; max-width: 1200px; margin: 0 auto; 
